--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@vercel/kv": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
