--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "http-errors": "^2.0.0",
     "middleware-http-errors": "^0.1.2",
     "morgan": "^1.10.0",
+    "sync-request": "^6.1.0",
     "ts-node": "^10.9.2",
     "vercel": "^35.2.1"
   }
